--- a/SpringBoot/pom.xml
+++ b/SpringBoot/pom.xml
@@ -14,29 +14,18 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-
-
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>3.1.0</version>
+            <version>2.6.0</version>
         </dependency>
-
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-test</artifactId>
-                <scope>test</scope>
-                <version>2.6.0</version>
-            </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+            <version>2.6.0</version>
         </dependency>
-
-
     </dependencies>
     <build>
         <plugins>
@@ -46,12 +35,13 @@
                 <executions>
                     <execution>
                         <configuration>
-                            <mainClass>com.example.Main</mainClass>
+                            <mainClass>org.example.Main</mainClass>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
         </plugins>
     </build>
+
 
 </project>
